docs/7.52/md/abennews-40-other-40ab.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 4.xx](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-4.htm) →  [Changes in Releases 4.0 and 4.5](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-40.htm) → 

Further Changes in Release 4.0

[1\. EDITOR-CALL FOR itab: Better performance](#!ABAP_MODIFICATION_1@1@)

[2\. DESCRIBE FIELD f INTO td](#!ABAP_MODIFICATION_2@2@)

[3\. DATA: Fields with '+' or '()' at the end](#!ABAP_MODIFICATION_3@3@)

[4\. ABAP types 1 and 2](#!ABAP_MODIFICATION_4@4@)

[5\. WRITE: New formatting option NO-GROUPING](#!ABAP_MODIFICATION_5@5@)

[6\. WRITE: Better performance for WRITE (name)...TO](#!ABAP_MODIFICATION_6@6@)
[
7\. SET RUN TIME ANALYZER: Addition MODE obsolete.](#!ABAP_MODIFICATION_7@7@)
[
8\. Arithmetic using DICTIONARY types INT1 and INT2](#!ABAP_MODIFICATION_8@8@)
[
9\. PERFORM form(prog): Better performance for addition IF FOUND](#!ABAP_MODIFICATION_9@9@)
[
10.Contexts](#!ABAP_MODIFICATION_10@10@)

Modification 1

Better performance of [EDITOR-CALL FOR itab](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapeditor-call_for_itab.htm)
The table is only returned with changes if saved in the editor. The new addition ... BACKUP INTO is used to return the table to its original state. Return Code is used to indicate whether change operations were performed in the editor.

Modification 2

New variant [DESCRIBE FIELD f INTO td](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdescribe_field.htm)
This new variant can be used to determine all of the attributes of a data object f.
Also, a simple DESCRIBE can be used with the addition "HELP-ID hlp" to determine which help ID belongs to f if any.

Modification 3

[DATA:](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata.htm) Fields ending with a '+' or '()' are no longer allowed.

Modification 4

[ABAP types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_simple.htm) 1 and 2
In Release 3.x, the ABAP types 1 and 2 were still supported in some areas in a very basic manner to retain R/2 compatibility. This is no longer the case in Release 4.0.

Modification 5

[WRITE: New formatting option NO-GROUPING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to_options.htm)
If a field of type I or type P is displayed, its thousands separator is suppressed.

Modification 6

[WRITE: Better Performance for WRITE (name) TO...](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwrite_to.htm)
If the content of the field name is invalid, a return code is set and the target field is left unchanged.

Modification 7

[SET RUN TIME ANALYZER ON/OFF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_analyzer.htm)
The addition MODE is no longer used.

Modification 8

Arithmetic using DICTIONARY types INT1 and INT2
Assignments and arithmetic using DICTIONARY types INT1 and INT2 as target fields must remain within the following value ranges:

-   INT1: 0 to 255
    
-   INT2: -32768 to 32767.
    

Otherwise a runtime error is produced.

Modification 9

PERFORM form(prog): Better performance for addition IF FOUND
The PERFORM statement is ignored if the program specified cannot be found.

Modification 10

Contexts

An overview of contexts is provided [here](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontexts.htm).

This translation does not reflect the current version of the documentation.